# ml-projects

./: .gitignore  LICENSE  README.md
anomaly-detection/: Anomaly Detection.ipynb  Anomaly_Detection_P1.ipynb  README.md
automotive-dashboard/: README.md  Sales Analytics using PowerBI.ipynb
enterprise-doc-intel/: .env.example  .gitignore  HARDENING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
enterprise-doc-intel/data/sample_docs/policies/: data-security-policy.md  leave-policy.md  remote-work-policy.md
enterprise-doc-intel/data/sample_docs/reports/: q4-2024-summary.md
enterprise-doc-intel/data/sample_docs/technical/: api-documentation.md  architecture-overview.md
enterprise-doc-intel/src/: config.py
enterprise-doc-intel/src/agents/: orchestrator.py  planner.py  tools.py
enterprise-doc-intel/src/api/: app.py  models.py
enterprise-doc-intel/src/api/routes/: graph.py  health.py  ingest.py  query.py
enterprise-doc-intel/src/embeddings/: provider.py
enterprise-doc-intel/src/ingestion/: chunker.py  loader.py  pipeline.py
enterprise-doc-intel/src/knowledge_graph/: extractor.py  neo4j_client.py  query.py
enterprise-doc-intel/src/rag/: context_builder.py  generator.py  retriever.py
enterprise-doc-intel/src/ui/: __init__.py  dashboard.py
enterprise-doc-intel/src/vectorstore/: chroma.py
enterprise-doc-intel/tests/: test_agent.py  test_api_models.py  test_api_routes.py  test_chunker.py  test_context_builder.py  test_embeddings.py  test_generator.py  test_knowledge_graph.py  test_loader.py  test_neo4j_client_unit.py  test_pipeline.py  test_retriever.py
fieldsync-ai/: .env.local.template  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
(+45 files in other folders)
