[project]
name = "enterprise-doc-intel"
version = "0.1.0"
description = "Enterprise Document Intelligence — RAG, Knowledge Graphs & Agentic Systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.0.0",
    "chromadb>=0.6.0",
    "neo4j>=5.27.0",
    "ollama>=0.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
ui = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "networkx>=3.4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
